maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:13: error: Unmatched closing brace '}' ignored here
          }
          ^WallFollowerMaze:14: error: ';' expected but 'else' found.
        else{left(); forward()}
        ^WallFollowerMaze:17: error: ';' expected but 'else' found.
  else{
  ^WallFollowerMaze:28: error: Unmatched closing brace '}' ignored here
}
^